# coursework-5

./: README.md  config.py  pyproject.toml
src/: dbmanager.py  funcs.py  hhapi.py
